--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "glob": "^6.0.4",
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
-    "mysql": "^2.10.2",
+    "mysql": "^2.12.0",
     "nodemon": "^1.11.0",
     "sequelize": "^3.19.1",
     "serve-favicon": "~2.3.0",
     "yamljs": "^0.2.4"
+  },
+  "devDependencies": {
+    "sequelize-auto": "^0.4.17"
   }
 }
