--- a/package.json
+++ b/package.json
@@ -6,17 +6,21 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^0.8.7",
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
+    "cors": "^2.8.1",
     "deasync": "^0.1.4",
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "glob": "^6.0.4",
-    "jade": "~1.11.0",
+    "jsonwebtoken": "^7.1.9",
+    "lodash": "^4.17.0",
+    "mongoose": "^4.6.7",
     "morgan": "~1.6.1",
-    "mysql": "^2.12.0",
     "nodemon": "^1.11.0",
-    "sequelize": "^3.19.1",
+    "passport": "^0.3.2",
+    "passport-jwt": "^2.2.1",
     "serve-favicon": "~2.3.0",
     "yamljs": "^0.2.4"
   },
