--- a/package.json
+++ b/package.json
@@ -20,7 +20,12 @@
     "morgan": "~1.6.1",
     "nodemon": "^1.11.0",
     "passport": "^0.3.2",
+    "passport-facebook": "^2.1.1",
+    "passport-google-oauth": "^1.0.0",
+    "passport-google-oauth2": "^0.1.6",
+    "passport-instagram": "^1.0.0",
     "passport-jwt": "^2.2.1",
+    "passport-twitter": "^1.0.4",
     "serve-favicon": "~2.3.0",
     "yamljs": "^0.2.4"
   },
